--- a/Sample/src/main/res/layout/item_list_layout.xml
+++ b/Sample/src/main/res/layout/item_list_layout.xml
@@ -6,51 +6,36 @@
     android:background="@drawable/drawable_list_item_selector"
     android:orientation="vertical">
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/list_item_margin_top_bottom_smaller"
         android:layout_marginLeft="@dimen/list_item_margin_left_right"
         android:layout_marginRight="@dimen/list_item_margin_left_right"
-        android:layout_marginTop="@dimen/list_item_margin_top_bottom_smaller">
+        android:layout_marginTop="@dimen/list_item_margin_top_bottom_smaller"
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/iv_logo"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:src="@mipmap/ic_launcher"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/list_item_margin_top_bottom_smaller"
-            android:layout_toRightOf="@+id/iv_logo"
-            android:orientation="vertical">
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:text="title"
+            android:textColor="@color/font1"
+            android:textSize="16sp"/>
 
-            <TextView
-                android:id="@+id/tv_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:text="title"
-                android:textColor="@color/font1"
-                android:textSize="16sp"/>
-
-            <TextView
-                android:id="@+id/tv_subtitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:text="subtitle"
-                android:textColor="@color/font2"
-                android:textSize="11sp"/>
-        </LinearLayout>
-
-    </RelativeLayout>
+        <TextView
+            android:id="@+id/tv_subtitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:text="subtitle"
+            android:textColor="@color/font2"
+            android:textSize="11sp"/>
+    </LinearLayout>
 
     <include
         layout="@layout/divider_1px"
