--- a/sample/src/main/res/layout/item_list_layout.xml
+++ b/sample/src/main/res/layout/item_list_layout.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/drawable_list_item_selector"
@@ -9,10 +8,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/list_item_margin_top_bottom_smaller"
         android:layout_marginLeft="@dimen/list_item_margin_left_right"
-        android:layout_marginRight="@dimen/list_item_margin_left_right"
         android:layout_marginTop="@dimen/list_item_margin_top_bottom_smaller"
+        android:layout_marginRight="@dimen/list_item_margin_left_right"
+        android:layout_marginBottom="@dimen/list_item_margin_top_bottom_smaller"
         android:orientation="vertical">
 
         <TextView
@@ -23,7 +22,7 @@
             android:maxLines="1"
             android:text="title"
             android:textColor="@color/font1"
-            android:textSize="16sp"/>
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/tv_subtitle"
@@ -34,7 +33,7 @@
             android:maxLines="1"
             android:text="subtitle"
             android:textColor="@color/font2"
-            android:textSize="11sp"/>
+            android:textSize="11sp" />
     </LinearLayout>
 
     <include
@@ -42,7 +41,7 @@
         android:layout_width="match_parent"
         android:layout_height="1px"
         android:layout_marginLeft="@dimen/list_item_margin_left_right"
-        android:layout_marginRight="@dimen/list_item_margin_left_right"/>
+        android:layout_marginRight="@dimen/list_item_margin_left_right" />
 </LinearLayout>
 
 
